# vj-nano

./: .gitignore  README.md  pyproject.toml  run.sh  setup.cfg  setup.py  setup_jetson.sh
config/: panda3d.prc
scripts/: audio_sender.py
src/vj/: app.py  main.py
src/vj/audio/: analyzer.py  net_source.py  sources.py
src/vj/render/: actor.py  animation.py  animator.py  app.py  effects.py  filters.py  gltf_actor.py  gltf_animator.py  gui.py  milkdrop.py  moses.py  postprocess_frag.glsl
src/vj/render/shaders/: milkdrop.py  milkdrop_fractal.glsl  milkdrop_plasma.glsl  milkdrop_tunnel.glsl  milkdrop_vert.glsl  milkdrop_wave.glsl  postprocess_vert.glsl  ps1_fragment.glsl  ps1_fragment_v2.glsl  ps1_vertex.glsl  ps1_vertex_v2.glsl  test_red.glsl
src/vj/vision/: palette.py  snapshot.py  webcam.py
tests/: test_audio_analyzer.py  test_palette.py
