[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata lives in setup.cfg so that older pip/setuptools combos
# (JetPack 4.6.4: pip 9 -> 21, setuptools 39 -> 59) can install this
# package in editable mode without PEP 660 / 'build_editable' support.
