[metadata]
name = vj-nano
version = 0.1.0
description = PS1-style music-reactive VJ rig for Jetson Nano
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19,<2.0
    scipy>=1.5,<1.6
    sounddevice>=0.4
    soundfile>=0.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    opencv-python>=4.5
    panda3d>=1.10.13
    pytest>=6
    matplotlib>=3.3

[options.entry_points]
console_scripts =
    vj = vj.main:main
